# local-cli

./: .gitignore  README.easy-ja.md  README.ja.md  README.md  e2e_verify.mjs  package-lock.json  pyproject.toml  verify_subtask_6_2.py
desktop/: index.html  package-lock.json  package.json  vite.config.ts
docs/: prompts.md  skills.md
local_cli/: __init__.py  __main__.py  agent.py  bench.py  cli.py  clipboard.py  config.py  context_sizing.py  conversation_store.py  diff_preview.py  git_ops.py  harness.py  health_check.py  ideation.py  knowledge.py  model_catalog.py  model_manager.py  model_presets.py  model_registry.py  model_search.py  model_selector.py  ollama_client.py  orchestrator.py  plan_manager.py  project_instructions.py  project_map.py  prompts.py  rag.py  security.py  server.py  session.py  session_log.py  skills.py  spinner.py  sub_agent.py  system_info.py  token_tracker.py  tool_cache.py  updater.py  web_monitor.py
scripts/: capture-demo.sh  e2e_server_report.py  harness_eval.py  install.sh  launch.py  local-cli.sh  repro_report.py
tests/: __init__.py  test_agent.py  test_clipboard.py  test_config.py  test_context_command.py  test_context_sizing.py  test_conversation_store.py  test_diff_preview.py  test_git_ops.py  test_harness.py  test_harness_bash_guard.py  test_harness_conflict_markers.py  test_harness_deliverable_guard.py  test_harness_inlined_args.py  test_harness_namekey_rescue.py  test_harness_python_call_rescue.py  test_harness_read_gate.py  test_harness_verify_toml.py  test_health_check.py  test_ideation.py  test_knowledge.py  test_main.py  (+25 more)
(+61 files in other folders)
